Sat Apr 14 19:23:52 2001  Christopher Faylor <cgf@cygnus.com>

	* config.h.in: Turn on VFORK by default.

Sat Apr 14 18:04:35 2001  Christopher Faylor <cgf@cygnus.com>

	* net.cc (cygwin_socket): Set SO_LINGER to small value so closed UNIX
	domain sockets will not stay around.

Sat Apr 14 18:01:43 2001  Pierre A. Humblet  <Pierre.Humblet@ieee.org>

	* select.cc (socket_cleanup): Set SO_LINGER to small value so closed
	dummy sockets do not stay around.  Use correct value for second argument
	to shutdown.

Sat Apr 14 17:04:00 2001  Robert Collins <rbtcollins@hotmail.com>

	* thread.h (MTinterface): Add threadcount.
	* thread.cc (MTinterface::Init): Set threadcount to 1.
	(__pthread_create): Increment threadcount.
	(__pthread_exit): Decrement threadcount and call exit() from the last thread.

Fri Apr 13 11:34:24 2001  Robert Collins <rbtcollins@hotmail.com>

	* fork.cc (fork_child): Call the __pthread_atforkchild function.
	(fork_parent): Call the __pthread_atforkparent function.
	* cygwin.din: Export pthread_atfork.
	* thread.h (callback): New class.
	(MTinterface): Use it.
	* thread.cc (__pthread_atforkprepare): New function.
	(__pthread_atforkparent): New function.
	(__pthread_atforkchild): New function.
	(__pthread_atfork): New function.
	* pthread.cc (pthread_atfork): New function.

Fri Apr 13  9:52:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (add_ext_from_sym): New define evaluating `known'suffix'.
	(path_conv::check): Use add_ext_from_sym throughout.

Thu Apr 12 23:19:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* dir.cc (mkdir): Check for case clash.
	* environ.cc: Add extern declaration for `pcheck_case'.
	(check_case_init): New function.
	(struct parse_thing): Add "check_case" option.
	* errno.cc (_sys_nerrlist): Add text for ECASECLASH.
	(strerror): Add case branch for ECASECLASH.
	* fhandler.cc (fhandler_disk_file::open): Check for case clash.
	* path.cc: Add global variable `pcheck_case'.