@@ -1,3 +1,8 @@
+Sun Apr 15 15:56:00 2001  Corinna Vinschen <corinna@vinschen.de>
+
+	* path.cc (add_ext_from_sym): Redefine to call `add_ext_from_sym_'.
+	(add_ext_from_sym_): New inline function.
+
 Sat Apr 14 19:23:52 2001  Christopher Faylor <cgf@cygnus.com>
 
 	* config.h.in: Turn on VFORK by default.
